[package]
name = "xenoverse2-save-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
sha1 = "0.10.6"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"

[dependencies.pyo3]
version = "0.28.0"
optional = true
features = ["extension-module"]

[features]
default = []
pyo3 = ["dep:pyo3"]

[[bin]]
name = "xv2_converter"
path = "src/main.rs"

[profile.release]
strip = true  # Automatically strip symbols from release binary