[package]
name = "xenoverse2-save-converter"
version = "0.1.0"
edition = "2021"

[lib]
name = "xv2_converter_lib"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
sha1 = "0.10.6"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
libc = "0.2"

[dependencies.pyo3]
version = "0.28.0"
optional = true
features = ["extension-module"]

[features]
default = []
python = ["dep:pyo3"]
c = []

[[bin]]
name = "xv2_converter"
path = "src/main.rs"

[profile.release]
strip = true  # Automatically strip symbols from release binary